Se implementa el uso correcto de la indexacion con el archivo robots.txt y el archivo sitemap.xml, ademas de implementar todas las rutas satisfactoriamente

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,49 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Cache-Control" content="max-age=31536000" />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="/static/media/408159250_1500025447238105_8577606297699606904_n.3fc304ff05eba4cee6b3.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="/static/media/312836511_1260683794505606_4640947843586577290_n.b5fb0d24fbac080309c4.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="/static/media/369845846_601863632157515_5249728143877099575_n.1240ed8ad99dba6a9d49.webp"
+      type="image/webp"
+    />
+
+    <meta
+      name="google-site-verification"
+      content="hoXX0Kxh6qkZKAT4wsrnzH_rV5FYjEnoCMXf4nfs2pg"
+    />
     <meta name="description" content="Servicios Fotográficos GonHer" />
+    <link rel="canonical" href="https://serviciosfotograficosgonher.web.app" />
+
+    <meta name="keywords" content="fotografias" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="sitemap" href="./sitemap.xml" type="xml"/>
+    <link rel="robots" href="./robots.txt" type="txt"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,10 +60,10 @@
     <title>Servicios Fotográficos GonHer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
+    <!--<link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
-    />
+    />-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,7 +78,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
+    <!--
     <script>
       window.fbAsyncInit = function () {
         FB.init({
@@ -66,7 +102,7 @@
         js.src = "https://connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
       })(document, "script", "facebook-jssdk");
-    </script>
+    </script> -->
+    <script src="tsparticles.engine.min.js"></script>
   </body>
-  
 </html>
